# NSL-3130AA-YOLOv8-Pose-estimation

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  main.h  videoSource.cpp  videoSource.h
data/: export.py  track.py  track_plot.py  track_plot_local.py
lidar/: NSL3130AA.cpp  NSL3130AA.h  NSLFrame.h  lens_transform.cpp  lens_transform.h  videoSource.cpp  videoSource.h
nsl_lib/include/: nanolib.h
nsl_lib/lib/windows/shared/: nanolib.lib
nsl_lib/lib/windows/static/: nanolib.lib
tools/: ImageTools.cpp  ImageTools.h  timecheck.cpp  timecheck.h
yolo/: YoloDet.cpp  YoloDet.h  YoloPose.cpp  YoloPose.h
